--- a/Readme.adoc
+++ b/Readme.adoc
@@ -11,6 +11,16 @@ properly.
 
 Assembling the site from the baked AsciiDoc files and the additional files is performed via the `jbakeSite` task.
 
+== Usage
+
+Add to `plugins.sbt` of your project
+
+[source,scala]
+----
+// Generate site with JBake
+addSbtPlugin("de.wayofquality.sbt" % "sbt-jbake" % "0.1.2")
+----
+
 == Configuration settings
 
 jbakeLib (`ModuleID`)::
@@ -97,7 +107,7 @@ jbakeSiteAssets := Map.empty
 * If you are working on the documentation, you can initially run a `jbakeSite` to make sure all the
   required assets are copied into the correct place within the generated site directory.
 
-Afterwards, you can run `;set jbakeMode := "serve"; jbakeBuild`. This will start JBake itself in
+Afterwards, you can run `;set Compile/jbakeMode := "serve"; jbakeBuild`. This will start JBake itself in
 https://jbake.org/docs/2.6.4/#preview[server mode], so that you can preview the site locally.
 
 == Sample setup
@@ -115,9 +125,13 @@ complete the configuration.
 
 == Changelog
 
+=== sbt-jbake 0.1.2 - 2019-05-23
+
+* Remove scope `Compile` from default settings.
+
 === sbt-jbake 0.1.1 - 2019-05-23
 
-* Automatically add the jbake binary distribution as a library dependy, so that it will be cached
+* Automatically add the jbake binary distribution as a library dependency, so that it will be cached
   in the local Ivy repository. The module ID can be set via the `jbakeLib` plugin setting.
 
 === sbt-jbake 0.1.0 - 2019-05-06
